--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,13 @@
 <html ng-app="App">
   <head>
     <title>BalapKetik</title>
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="assets/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="assets/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous">
     <style>
       .correct {
         color: blue !important;
@@ -23,7 +30,7 @@
         &nbsp;&nbsp;<b ng-show="count">Mulai dalam {{count}}</b>
         <br>
         <br>
-        <button ng-disabled="!id" ng-show="seconds<1 && !count && !race" ng-click="emitStart()">Mulai</button>
+        <button ng-disabled="!id" class ="btn btn-primary" ng-show="seconds<1 && !count && !race" ng-click="emitStart()">Mulai</button>
         <button ng-show="seconds>0" ng-click="emitStop()">Nyerah ah!</button>
         <br>
         <br>
