--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,7 @@
 <html ng-app="App">
   <head>
     <title>BalapKetik</title>
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="assets/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="assets/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous">
+    
     <style>
       .correct {
         color: blue !important;
@@ -26,12 +20,12 @@
   </head>
   <body ng-controller="AppCtrl">
       <div>
-        {{appName}} &nbsp;<span ng-hide="id"><input ng-model="name"><button ng-disabled="!name" ng-click="emitJoin(name)">Ikut</button></span>
+        {{appName}} &nbsp;<span ng-hide="id"><input ng-model="name"><button ng-disabled="!name" class="btn btn-primary" ng-click="emitJoin(name)">Ikut</button></span>
         &nbsp;&nbsp;<b ng-show="count">Mulai dalam {{count}}</b>
         <br>
         <br>
-        <button ng-disabled="!id" class ="btn btn-primary" ng-show="seconds<1 && !count && !race" ng-click="emitStart()">Mulai</button>
-        <button ng-show="seconds>0" ng-click="emitStop()">Nyerah ah!</button>
+        <button ng-disabled="!id" class="btn btn-primary" ng-show="seconds<1 && !count && !race" ng-click="emitStart()">Mulai</button>
+        <button class="btn btn-primary" ng-show="seconds>0" ng-click="emitStop()">Nyerah ah!</button>
         <br>
         <br>
         <div ng-repeat="id in participants track by $index">
@@ -46,6 +40,13 @@
           Ketik : <input ng-model="input" ng-keypress="strike($event)">
           <br>Detik : {{seconds}}
       </div>
+     <link rel="stylesheet" href="assets/css/bootstrap.min.css" >
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="assets/css/bootstrap-theme.min.css">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="assets/js/bootstrap.min.js" > 
     <script src="http://localhost:3000/assets/socket.io-1.2.0.js"></script>
     <script src="http://localhost:3000/assets/jquery.js"></script>
     <script src="http://localhost:3000/assets/angular.js"></script>
